hphp/hack/test/typecheck/null1.php.exp
File "null1.php", line 21, characters 12-13:
Invalid return type (Typing[4110])
File "null1.php", line 12, characters 17-19:
This is an int
File "null1.php", line 16, characters 12-15:
It is incompatible with a nullable type
